--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       --shadow: rgba(0, 0, 0, 0.1);
       animation: none;
     }
-
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -34,12 +33,10 @@
       background: linear-gradient(135deg, #0a0f24, #101428, #0c122a);
       background-size: 600% 600%;
     }
-
     @keyframes bgPulse {
       0%, 100% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
     }
-
     h1 {
       font-family: 'Russo One', sans-serif;
       font-size: 2.5rem;
@@ -47,7 +44,6 @@
       color: var(--highlight);
       animation: fadeIn 1s ease-out;
     }
-
     .container {
       max-width: 600px;
       margin: auto;
@@ -57,17 +53,19 @@
       box-shadow: 0 0 20px var(--shadow);
       animation: fadeInUp 0.7s ease-out;
     }
-
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
     input, textarea, select {
       width: 100%;
       padding: 0.75rem;
       margin-top: 0.3rem;
-      margin-bottom: 1rem;
       border: none;
       border-radius: 8px;
       background: var(--input-bg);
@@ -75,13 +73,11 @@
       font-size: 1rem;
       transition: box-shadow 0.3s ease, background 0.3s ease;
     }
-
     input:focus, textarea:focus, select:focus {
       outline: none;
       box-shadow: 0 0 10px var(--highlight);
       background-color: #2a2f4d;
     }
-
     .theme-toggle {
       position: fixed;
       top: 1rem;
@@ -96,11 +92,9 @@
       z-index: 999;
       transition: transform 0.2s ease;
     }
-
     .theme-toggle:hover {
       transform: scale(1.05);
     }
-
     .sticky-button {
       position: fixed;
       bottom: 0;
@@ -111,7 +105,6 @@
       box-shadow: 0 -4px 10px var(--shadow);
       z-index: 100;
     }
-
     button.generate {
       background-color: var(--highlight);
       color: #000;
@@ -124,18 +117,25 @@
       font-weight: bold;
       transition: background-color 0.3s ease, transform 0.2s ease;
     }
-
     button.generate:hover {
       background-color: #00c98e;
       transform: scale(1.02);
     }
-
     button.generate:disabled {
       background-color: #888;
       cursor: not-allowed;
       transform: none;
     }
-
+    button.generate.loading::after {
+      content: " ⏳";
+      animation: dots 1s steps(3, end) infinite;
+    }
+    @keyframes dots {
+      0% { content: " ⏳"; }
+      33% { content: " ⏳."; }
+      66% { content: " ⏳.."; }
+      100% { content: " ⏳..."; }
+    }
     .output {
       margin-top: 2rem;
       background: #1e2640;
@@ -147,7 +147,6 @@
       animation: fadeIn 0.5s ease-in;
       min-height: 100px;
     }
-
     .live-preview {
       font-style: italic;
       color: #aaa;
@@ -155,12 +154,10 @@
       font-size: 0.95rem;
       min-height: 60px;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
     }
-
     @media (min-width: 601px) {
       .sticky-button {
         position: static;
@@ -175,41 +172,83 @@
   <button class="theme-toggle" onclick="toggleTheme()">Tryb: <span id="themeLabel">Nocny</span></button>
   <div class="container">
     <h1>Generator Podsumowań</h1>
-    <label>Drużyna A:<input id="teamA" oninput="liveUpdate()" autofocus /></label>
-    <label>Drużyna B:<input id="teamB" oninput="liveUpdate()" /></label>
-    <label>Wynik:<input id="score" oninput="liveUpdate()" /></label>
-    <label>Wynik do przerwy:<input id="halftime" oninput="liveUpdate()" /></label>
-    <label>Pierwszy strzelec:<input id="firstScorer" oninput="liveUpdate()" /></label>
-    <label>Liczba bramek (łącznie):<input id="totalGoals" oninput="liveUpdate()" /></label>
-    <label>Bramki do przerwy:<input id="goalsHalftime" oninput="liveUpdate()" /></label>
-    <label>Strzelcy:<textarea id="scorers" oninput="liveUpdate()"></textarea></label>
-    <label>Kartki:<textarea id="cards" oninput="liveUpdate()"></textarea></label>
-    <label>MVP meczu:<input id="mvp" oninput="liveUpdate()" /></label>
-    <label>SuperStar - Drużyna A:<input id="starA" oninput="liveUpdate()" /></label>
-    <label>SuperStar - Drużyna B:<input id="starB" oninput="liveUpdate()" /></label>
-    <label>Sędzia:<input id="referee" oninput="liveUpdate()" /></label>
-    <label>Miejsce w tabeli - Drużyna A:<input id="placeA" oninput="liveUpdate()" /></label>
-    <label>Miejsce w tabeli - Drużyna B:<input id="placeB" oninput="liveUpdate()" /></label>
-    <label>Wydarzenia specjalne:<textarea id="events" oninput="liveUpdate()"></textarea></label>
-    <label>Tryb generowania:
-      <select id="mode">
-        <option value="template">Szablon (offline)</option>
-        <option value="ai">AI (OpenRouter)</option>
-      </select>
-    </label>
-    <label>Styl generowania:
-      <select id="style">
-        <option value="serio">Na serio</option>
-        <option value="luz">Na luzie</option>
-      </select>
-    </label>
-    <label>OpenRouter API Key:<input id="apikey" placeholder="Wymagany tylko dla AI" /></label>
+  
+    <label for="teamA">Drużyna A: <span style="color: red;">⭐</span></label>
+    <input id="teamA" oninput="liveUpdate()" placeholder="np. FC Łódź" autofocus />
+  
+    <label for="teamB">Drużyna B: <span style="color: red;">⭐</span></label>
+    <input id="teamB" oninput="liveUpdate()" placeholder="np. Tęcza United" />
+  
+    <label for="score">Wynik: <span style="color: red;">⭐</span></label>
+    <input id="score" oninput="liveUpdate()" placeholder="np. 2:1" />
+  
+    <button type="button" onclick="toggleAdvanced()" id="toggleAdvancedBtn" style="margin: 1rem 0;">🔽 Pokaż więcej opcji</button>
+  
+    <div id="advancedFields" style="display: none;">
+      <label for="halftime">Wynik do przerwy:</label>
+      <input id="halftime" oninput="liveUpdate()" placeholder="np. 1:0" />
+  
+      <label for="firstScorer">Pierwszy strzelec:</label>
+      <input id="firstScorer" oninput="liveUpdate()" placeholder="np. Kowalski (FC Łódź)" />
+  
+      <label for="totalGoals">Liczba bramek (łącznie):</label>
+      <input id="totalGoals" oninput="liveUpdate()" placeholder="np. 3" />
+  
+      <label for="goalsHalftime">Bramki do przerwy:</label>
+      <input id="goalsHalftime" oninput="liveUpdate()" placeholder="np. 1" />
+  
+      <label for="scorers">Strzelcy:</label>
+      <textarea id="scorers" oninput="liveUpdate()" placeholder="np. Kowalski 12', Nowak 33'"></textarea>
+  
+      <label for="cards">Kartki:</label>
+      <textarea id="cards" oninput="liveUpdate()" placeholder="np. Żółta: Malinowski 45'"></textarea>
+  
+      <label for="mvp">MVP meczu:</label>
+      <input id="mvp" oninput="liveUpdate()" placeholder="np. Kowalski" />
+  
+      <label for="starA">SuperStar - Drużyna A:</label>
+      <input id="starA" oninput="liveUpdate()" placeholder="np. Kowalski" />
+  
+      <label for="starB">SuperStar - Drużyna B:</label>
+      <input id="starB" oninput="liveUpdate()" placeholder="np. Nowak" />
+  
+      <label for="referee">Sędzia:</label>
+      <input id="referee" oninput="liveUpdate()" placeholder="np. Tomasz Sędzia" />
+  
+      <label for="placeA">Miejsce w tabeli - Drużyna A:</label>
+      <input id="placeA" oninput="liveUpdate()" placeholder="np. 1" />
+  
+      <label for="placeB">Miejsce w tabeli - Drużyna B:</label>
+      <input id="placeB" oninput="liveUpdate()" placeholder="np. 4" />
+  
+      <label for="events">Wydarzenia specjalne:</label>
+      <textarea id="events" oninput="liveUpdate()" placeholder="np. rzut karny w 89'"></textarea>
+    </div>
+  
+    <label for="mode">Tryb generowania:</label>
+    <select id="mode">
+      <option value="template">Szablon (offline)</option>
+      <option value="ai">AI (OpenRouter)</option>
+    </select>
+  
+    <label for="style">Styl generowania:</label>
+    <select id="style">
+      <option value="serio">Na serio</option>
+      <option value="luz">Na luzie</option>
+    </select>
+  
+    <label for="apikey">OpenRouter API Key:</label>
+    <input id="apikey" placeholder="Wymagany tylko dla AI" />
+  
     <div class="live-preview" id="livePreview">Podgląd na żywo...</div>
     <div class="output" id="summary"></div>
-  </div>
-  <div class="sticky-button">
+  
     <button class="generate" id="generateBtn" onclick="generateSummary()">Generuj podsumowanie</button>
+    <button class="generate" onclick="downloadSummary()">Zapisz jako TXT</button>
   </div>
+
+  <audio id="clickSound" src="click.mp3" preload="auto"></audio>
+
   <script>
     function getData() {
       return {
@@ -232,6 +271,10 @@
       };
     }
 
+    function validate(data) {
+      return data.teamA && data.teamB && data.score;
+    }
+
     async function generateSummary() {
       const data = getData();
       const mode = document.getElementById("mode").value;
@@ -239,11 +282,24 @@
       const apiKey = document.getElementById("apikey").value;
       const summaryDiv = document.getElementById("summary");
       const generateBtn = document.getElementById("generateBtn");
+      const clickSound = document.getElementById("clickSound");
 
+      clickSound.play();
       generateBtn.disabled = true;
+      generateBtn.classList.add("loading");
       summaryDiv.textContent = "";
 
-      const finish = () => generateBtn.disabled = false;
+      if (!validate(data)) {
+        alert("Wprowadź drużyny i wynik!");
+        generateBtn.disabled = false;
+        generateBtn.classList.remove("loading");
+        return;
+      }
+
+      const finish = () => {
+        generateBtn.disabled = false;
+        generateBtn.classList.remove("loading");
+      };
 
       if (mode === "template") {
         typeText(summaryDiv, generateTemplate(data, style), 0, finish);
@@ -258,7 +314,27 @@
           ? "Napisz w lekkim, zabawnym stylu, pełnym luzu i emocji."
           : "Napisz w poważnym, sportowo-analitycznym stylu.";
 
-        const prompt = `${styleInstructions}\nStwórz podsumowanie meczu piłkarskiego pomiędzy ${data.teamA} i ${data.teamB}.\nWynik końcowy: ${data.score} (do przerwy: ${data.halftime}).\nPierwszy strzelec: ${data.firstScorer}.\nBramki: ${data.totalGoals} (do przerwy: ${data.goalsHalftime}).\nStrzelcy: ${data.scorers}.\nKartki: ${data.cards}.\nMVP: ${data.mvp}.\nSuperStar ${data.teamA}: ${data.starA}, SuperStar ${data.teamB}: ${data.starB}.\nSędzia: ${data.referee}.\nMiejsca w tabeli: ${data.teamA} - ${data.placeA}, ${data.teamB} - ${data.placeB}.\nDodatkowe wydarzenia: ${data.events}.`;
+        let prompt = `${styleInstructions}\nStwórz podsumowanie meczu piłkarskiego pomiędzy ${data.teamA} i ${data.teamB}.\nWynik końcowy: ${data.score}.`;
+
+        if (data.halftime) prompt += ` (do przerwy: ${data.halftime}).`;
+        if (data.firstScorer) prompt += `\nPierwszy strzelec: ${data.firstScorer}.`;
+        if (data.totalGoals) prompt += `\nBramki: ${data.totalGoals}`;
+        if (data.goalsHalftime) prompt += ` (do przerwy: ${data.goalsHalftime})`;
+        if (data.totalGoals || data.goalsHalftime) prompt += `.`;
+
+        if (data.scorers) prompt += `\nStrzelcy: ${data.scorers}.`;
+        if (data.cards) prompt += `\nKartki: ${data.cards}.`;
+        if (data.mvp) prompt += `\nMVP: ${data.mvp}.`;
+        if (data.starA) prompt += `\nSuperStar ${data.teamA}: ${data.starA}.`;
+        if (data.starB) prompt += `\nSuperStar ${data.teamB}: ${data.starB}.`;
+        if (data.referee) prompt += `\nSędzia: ${data.referee}.`;
+        if (data.placeA || data.placeB) {
+          prompt += `\nMiejsca w tabeli:`;
+          if (data.placeA) prompt += ` ${data.teamA} - ${data.placeA}`;
+          if (data.placeB) prompt += `, ${data.teamB} - ${data.placeB}`;
+          prompt += `.`;
+        }
+        if (data.events) prompt += `\nDodatkowe wydarzenia: ${data.events}.`;
 
         try {
           const res = await fetch("https://openrouter.ai/api/v1/chat/completions", {
@@ -273,12 +349,15 @@
               temperature: 0.9
             })
           });
+
           const json = await res.json();
-          if (json.error) {
-            summaryDiv.textContent = `Błąd API: ${json.error.message}`;
+          const aiText = json.choices?.[0]?.message?.content;
+
+          if (json.error || !aiText) {
+            summaryDiv.textContent = `Błąd API: ${json.error?.message || "Brak odpowiedzi z AI"}`;
             finish();
           } else {
-            typeText(summaryDiv, json.choices?.[0]?.message?.content || "Brak odpowiedzi", 0, finish);
+            typeText(summaryDiv, aiText, 0, finish);
           }
         } catch (e) {
           summaryDiv.textContent = `Błąd połączenia: ${e.message}`;
@@ -289,10 +368,11 @@
 
     function typeText(element, text, i = 0, onDone = () => {}) {
       element.textContent = "";
+      let index = i;
       function typer() {
-        if (i < text.length) {
-          element.textContent += text.charAt(i);
-          i++;
+        if (index < text.length) {
+          element.textContent += text.charAt(index);
+          index++;
           setTimeout(typer, 15);
         } else {
           onDone();
@@ -300,6 +380,8 @@
       }
       typer();
     }
+
+
 
     function liveUpdate() {
       const data = getData();
@@ -314,7 +396,6 @@
       const el = document.getElementById("livePreview");
       el.textContent = "";
       let i = 0;
-
       function typer() {
         if (i < text.length) {
           el.textContent += text.charAt(i);
@@ -331,13 +412,11 @@
         `${data.teamA} i ${data.teamB} rozegrali mecz zakończony ${data.score}. Strzelcy: ${data.scorers}.`,
         `Mecz ${data.teamA} - ${data.teamB}: ${data.score}. ${data.mvp} zagrał świetnie!`
       ];
-
       if (style === "luz") {
         warianty[0] = `Ależ mecz! ${data.teamA} kontra ${data.teamB}, wynik ${data.score}, MVP: ${data.mvp}!`;
         warianty[1] = `${data.teamA} i ${data.teamB} dali show! Strzelcy: ${data.scorers}. Wynik: ${data.score}`;
         warianty[2] = `${data.mvp} pokazał klasę, a wynik meczu to ${data.score}`;
       }
-
       return warianty[Math.floor(Math.random() * warianty.length)];
     }
 
@@ -354,6 +433,39 @@
         document.getElementById("themeLabel").textContent = "Dzienny";
       }
     });
+
+    document.addEventListener("keydown", function(e) {
+      if (e.key === "Enter" && !e.shiftKey && document.activeElement.tagName !== "TEXTAREA") {
+        e.preventDefault();
+        document.getElementById("generateBtn").click();
+      }
+    });
+
+    function downloadSummary() {
+      const text = document.getElementById("summary").textContent;
+      if (!text.trim()) {
+        alert("Brak wygenerowanego podsumowania!");
+        return;
+      }
+      const blob = new Blob([text], { type: 'text/plain' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "podsumowanie.txt";
+      a.click();
+      URL.revokeObjectURL(url);
+    }
+    function toggleAdvanced() {
+  const advanced = document.getElementById("advancedFields");
+  const btn = document.getElementById("toggleAdvancedBtn");
+  const isVisible = advanced.style.display === "block";
+  advanced.style.display = isVisible ? "none" : "block";
+  btn.textContent = isVisible ? "🔽 Pokaż więcej opcji" : "🔼 Ukryj dodatkowe opcje";
+}
+
   </script>
 </body>
 </html>
+
+
+
